--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query": "^5.52.2",
+    "@trpc/client": "^11.0.0-rc.489",
+    "@trpc/next": "^11.0.0-rc.489",
+    "@trpc/react-query": "^11.0.0-rc.489",
+    "@trpc/server": "^11.0.0-rc.489",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -24,6 +30,7 @@
     "lucide-react": "^0.428.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -31,6 +38,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
