--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
