--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-query": "^5.52.2",
     "@trpc/client": "^11.0.0-rc.489",
