--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
