--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "react-image-magnify": "^2.1.1",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -53,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-magnify": "^2.7.4",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
