ADD--mail added

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+USER = "arafatmannan2019@gmail.com"
+PASS = "vdku hqgj sepx oszo"
