--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "lucide-react": "^0.428.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-image-magnify": "^2.1.1",
     "simplex-noise": "^4.0.3",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-image-magnify": "^2.7.4",
