--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "argon2": "^0.41.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "next": "^14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "prisma": "^5.19.0",
