--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "postinstall": "npx prisma generate",
-    "lint": "next lint"
+    "lint": "next lint",
+    "boast":"npm run build && npm start"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
