--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "postinstall": "npx prisma generate",
     "lint": "next lint",
     "boast":"npm run build && npm start"
