--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next",
     "postinstall": "npx prisma generate",
     "lint": "next lint",
     "boast": "npm run build && npm start"
