--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-image-magnify": "^2.1.1",
+    "react-quill": "^2.0.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
