--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^5.3.0",
     "react-image-magnify": "^2.1.1",
     "react-quill": "^2.0.0",
+    "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -59,6 +60,7 @@
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
+    "zod-form-data": "^2.0.4",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
